tests/fail/pipeline/mid_ir_overwrite_owned_field_with_live_alias/main.kira
struct Cell { var value: Int }
struct Node { var cell: Cell }
struct Tree { var nodes: [Node] }

function overwrite(tree: borrow mut Tree) {
    var alias = tree
    tree.nodes = [Node { cell: Cell { value: 40 } }]
    alias.nodes[0].cell.value = alias.nodes[0].cell.value + 1
    return
}

@Main
function main() {
    var tree = Tree { nodes: [Node { cell: Cell { value: 1 } }, Node { cell: Cell { value: 2 } }] }
    overwrite(tree)
    return
}
